--- a/src/events-and-interfaces.jade
+++ b/src/events-and-interfaces.jade
@@ -17,6 +17,29 @@ style.
         li Приём проектирования "поведение"
         li Действия браузера по умолчанию
         li Генерация событий на элементах
+    h7 Задача 10
+    style.
+        .tooltip10 {
+            position: absolute;
+            left: 0px;
+            top: 0px;
+
+            padding: 5px 10px;
+            border: 1px solid green;
+            border-radius: 3px;
+            box-shadow: 1px 1px 3px rgba(0,0,0,.4);
+            background: white;
+        }
+        #container10 {
+            position: relative;
+        }
+    #container10
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
+        button(data-tooltip="подсказка длиннее, чем элемент") Короткая кнопка
+        button(data-tooltip="HTML<br>подсказка") Ещё кнопка
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
     h7 Задача 9 (сортировка таблицы по клику)
     style.
         .th9 {
