start /default-browser-action

--- a/src/events-and-interfaces.jade
+++ b/src/events-and-interfaces.jade
@@ -24,14 +24,17 @@ style.
             left: 0px;
             top: 0px;
 
-            padding: 5px 10px;
+            padding: 10px 15px;
             border: 1px solid green;
             border-radius: 3px;
             box-shadow: 1px 1px 3px rgba(0,0,0,.4);
             background: white;
         }
         #container10 {
-            position: relative;
+            left: 120px;
+        }
+        #container10 p {
+            width: 1000px;
         }
     #container10
         p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
