start chapter "event-details"

--- a/src/events-and-interfaces.jade
+++ b/src/events-and-interfaces.jade
@@ -17,6 +17,57 @@ style.
         li Приём проектирования "поведение"
         li Действия браузера по умолчанию
         li Генерация событий на элементах
+    h7 Задача 12
+    style.
+        #largeImg12 {
+            border: solid 1px #ccc;
+            width: 550px;
+            height: 400px;
+            padding: 5px;
+        }
+
+        #thumbs12 a {
+            border: solid 1px #ccc;
+            width: 100px;
+            height: 100px;
+            padding: 3px;
+            margin: 2px;
+            float: left;
+        }
+
+        #thumbs12 {
+            height: 150px;
+        }
+
+        #thumbs12 a:hover {
+            border-color: #FF9900;
+        }
+    #container12
+        p
+            img#largeImg12(
+                src='https://js.cx/gallery/img1-lg.jpg', alt='Large image')
+        #thumbs12
+            a(href='https://js.cx/gallery/img2-lg.jpg', title='Image 2')
+                img(src='https://js.cx/gallery/img2-thumb.jpg')
+            a(href='https://js.cx/gallery/img3-lg.jpg', title='Image 3')
+                img(src='https://js.cx/gallery/img3-thumb.jpg')
+            a(href='https://js.cx/gallery/img4-lg.jpg', title='Image 4')
+                img(src='https://js.cx/gallery/img4-thumb.jpg')
+            a(href='https://js.cx/gallery/img5-lg.jpg', title='Image 5')
+                img(src='https://js.cx/gallery/img5-thumb.jpg')
+            a(href='https://js.cx/gallery/img6-lg.jpg', title='Image 6')
+                img(src='https://js.cx/gallery/img6-thumb.jpg')
+    #container11
+        h7 Задача 11
+        style.
+            #contents11 {
+                padding: 5px;
+                border: 1px green solid;
+            }
+        fieldset#contents11
+            legend #contents
+            p.
+                Как насчет почитать <a href="http://wikipedia.org">Википедию</a>, или посетить <a href="http://w3.org"><i>W3.org</i></a> и узнать про современные стандарты?
     h7 Задача 10
     style.
         .tooltip10 {
