--- a/src/index.jade
+++ b/src/index.jade
@@ -37,4 +37,7 @@ include template/header
         li
           a(href="events-and-interfaces.html" title="Основы работы с событиями").
             Основы работы с событиями
+        li
+          a(href="event-details.html" title="События в деталях").
+            События в деталях
 include template/footer
