exercise /event-details.html

--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -54,6 +54,13 @@ style.
                 text-align: justify;
                 margin: 10px 3px;
             }
+            .tooltip3 {
+                position: absolute;
+                padding: 10px 15px;
+                border: 1px solid black;
+                border-radius: 3px;
+                background: white;
+            }
         #house3(data-tooltip='Это – внутренность дома')
             #roof3(data-tooltip='Это – крыша')
             p.p3
@@ -71,6 +78,12 @@ style.
                     href='http://ru.wikipedia.org/wiki/Три_поросёнка',
                     data-tooltip='Читать дальше…'
                     ) Наведи на меня
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
+        button(data-tooltip="подсказка длиннее, чем элемент") Короткая кнопка
+        button(data-tooltip="HTML<br>подсказка") Ещё кнопка
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
+        p ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя
 
     #container2
         p
