start /drag-and-drop-objects

--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -76,6 +76,7 @@ style.
 
             .draggable6 {
                 cursor: pointer;
+                outline: 1px solid green;
             }
         h2 Расставьте супергероев по полю.
         p
