--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -31,6 +31,31 @@ style.
             Загрузка документа: DOMContentLoaded, load, beforeunload, unload
         li.
             Загрузка скриптов, картинок, фреймов: onload и onerror
+    #container7
+        p
+            h7 Задача 7
+        style.
+            .computer7 {
+                width: 93px;
+                height: 98px;
+                background: url(https://js.cx/clipart/computer.gif) no-repeat;
+                padding: 5px;
+                font-style: italic;
+            }
+            .computer-smile7 {
+                background: url(https://js.cx/clipart/computer-smile.gif) no-repeat;
+            }
+            .draggable7 {
+                cursor: pointer;
+            }
+        div(style='height:64px')
+            img.draggable7(src='https://js.cx/browsers/chrome.svg')
+            img.draggable7(src='https://js.cx/browsers/firefox.svg')
+            img.draggable7(src='https://js.cx/browsers/ie.svg')
+            img.draggable7(src='https://js.cx/browsers/opera.svg')
+            img.draggable7(src='https://js.cx/browsers/safari.svg')
+        p Браузер переносить сюда:
+        .computer7.droppable7
     #container6
         p
             h7 Задача 6
