start /keyboard-events

--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -31,7 +31,76 @@ style.
             Загрузка документа: DOMContentLoaded, load, beforeunload, unload
         li.
             Загрузка скриптов, картинок, фреймов: onload и onerror
+    #container12
+        p
+            h7 Задача 12
+        style.
+            .news-item12 {
+                width: 700px;
+                text-align: justify;
+                margin-top: 20px;
+            }
+            .news-item12 .title12 {
+                font-weight: bold;
+                margin-bottom: 5px;
+            }
+        p Тексты и картинки взяты с сайта http://etoday.ru. 
+        h3 Все изображения с realsrc загружаются, когда становятся видимыми.
+        .news-item12
+            .title12 Космопорт Америка \ Architecture
+            |     Будущее уже сейчас! Скоро фраза из фантастического фильма "флипнуть до космопорта" станет реальностью. По крайней мере вторую ее часть человечество обеспечило. В октябре состоялась официальная церемония открытия космопорта «Америка», первой в мире коммерческой
+            |     площадки для частных космических полетов. Космопорт открылся в пустыне штата Нью-Мексико. Проект был реализован английским бюро Foster and Partners. Космопорт включает в себя зал ожидания и подготовки к полетам, диспетчерский пункт и ангар. Также
+            |     обеспечена взлетно-посадочная полоса длиной в три километра.
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='200', height='140', realsrc='https://js.cx/lazyimg/1.jpg')
+        .news-item12
+            .title12 Рокер и супермодель в Vogue Russia \ Celebrities
+            |     Супермодель Анна Вялицына (Anne Vyalitsyna) и музыкант Адам Ливайн (Adam Levine) снялись в ноябрьском номере Vogue Russia. Снимал их Аликс Малка (Alix Malka). Анна и Адам примерили на себя рок-н-ролльные наряды от Alexander Wang, Louis Vuitton, Alexander
+            |     McQueen, Balmain, Yves Saint Laurent, подобранные для них Катериной Мухиной.
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='200', height='259', realsrc='https://js.cx/lazyimg/2-1.jpg')
+                img(src='https://js.cx/lazyimg/1.gif', width='200', height='260', realsrc='https://js.cx/lazyimg/2-2.jpg')
+        .news-item12
+            .title12 Старость - не радость в Vogue Italia \ Fashion Photo
+            |     Стивен Мейзел (Steven Meisel) снял фотосессию для октябрьского Vogue Italia. В съемках приняли участие: Карен Элсон (Karen Elson), Джиневер ван Синус (Guinevere van Seenus), Эмма Балфур (Emma Balfour), Эн Уст (An Oost), Коринна Ингенлеф (Corinna Ingenleuf),
+            |     Танга Моро (Tanga Moreau), Кордула Рейер (Cordula Reyer), Гейл о`Нил (Gail O'Neil), Эвелин Кун (Evelyn Kuhn), Каролин де Мэгрэ (Caroline de Maigret), Дэльфин Бафор (Delfine Bafort), Кирстен Оуэн (Kirsten Owen), Гунилла Линдблад (Gunilla Lindblad).
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='341', height='474', realsrc='https://js.cx/lazyimg/3-1.jpg')
+                img(src='https://js.cx/lazyimg/1.gif', width='338', height='474', realsrc='https://js.cx/lazyimg/3-2.jpg')
+        .news-item12
+            .title12 "Вышитый рентген" Matthew Cox \ Art
+            |     Художник из Филадельфии Мэтью Кокс (Matthew Cox) создал серию работ, в которых объединены медицинский рентген и вышивка. Художник взял рентгенограммы и вышил их предполагаемое содержание частично со скелетными элементами. Получилось зловеще и интригующе.
+            |     Выставка "Вышитый рентген" будет демонстрироваться в галерее Packer/Schopf в Майами, в рамках Базельской Художественной Недели. Эта серия - только треть творческой продукции Кокса. Он также создает традиционные картины и иллюстрации.
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='680', height='452', realsrc='https://js.cx/lazyimg/4.jpg')
+        .news-item12
+            .title12 Подарочный каталог Apple 1983 \ Creative
+            |     Etoday предлагает полистать страницы подарочного каталога продукции Apple образца 1983 года. Кажется, это было так давно! Эта серия - только треть творческой продукции Кокса. Он также создает традиционные картины и иллюстрации.
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='600', height='393', realsrc='https://js.cx/lazyimg/5.jpg')
+        .news-item12
+            .title12 Винтажные открытки к празднику Halloween \ Illustrations
+            |     Занимательная коллекция старых почтовых открыток праздника Halloween. Открытки взяты из ньюйоркской публичной библиотеки и датируются примерно 1910 г.
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='680', height='433', realsrc='https://js.cx/lazyimg/6.jpg')
+        .news-item12
+            .title12 Фотограф Emily Lee \ Photography
+            |     Молодой фотограф Эмили Ли (Emily Lee) использует фотографию, чтобы выразить свои чувства. "Когда я смотрю на жизнь через камеру, вижу все более ясно, - пишет она на своем профиле Flickr. - Фотосъемка - это искусство наблюдения." Эмили Ли - обладательница
+            |     большого таланта и умения глубоко понимать искусство, хотя учится еще только в средней школе.
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='680', height='453', realsrc='https://js.cx/lazyimg/7.jpg')
+        .news-item12
+            .title12 Иконы моды в Fashimals \ Creative
+            |     Fashimals - tumblr-блог, посвященный иконам моды, превращенным в животных. Здесь есть Анна Винтур, Карл Лагерфельд, Терри Ричардсон, а также много других их коллег.
+            .illustrations
+                img(src='https://js.cx/lazyimg/1.gif', width='600', height='622', realsrc='https://js.cx/lazyimg/8.jpg')
+
+    #container11
+        p
+            h7 Задача 11 (Кнопка вверх-вниз)
     #container10
+        p
+            h7 Задача 10
         style.
             .column-left10 {
                 float: left;
