exercise /keyboard-events

--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -31,6 +31,15 @@ style.
             Загрузка документа: DOMContentLoaded, load, beforeunload, unload
         li.
             Загрузка скриптов, картинок, фреймов: onload и onerror
+    #container14
+        p
+            h7 Задача 14
+        | 
+    #container13
+        p
+            h7 Задача 13
+        | Введите ваш возраст:
+        input(type="text" id="input13")
     #container12
         p
             h7 Задача 12
