exercise /onload-onerror

--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -33,7 +33,7 @@ style.
             Загрузка скриптов, картинок, фреймов: onload и onerror
     #container14
         p
-            h7 Задача 14
+            h7 Задача 14 (нажмите одновременно клавиши с кнопками 'Q' + 'W')
         | 
     #container13
         p
