exercise /onload-onerror

--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -31,6 +31,36 @@ style.
             Загрузка документа: DOMContentLoaded, load, beforeunload, unload
         li.
             Загрузка скриптов, картинок, фреймов: onload и onerror
+    #container15
+        p
+            h7 Задача 15
+        style.
+            .img-replace15 {
+                display: inline-block;
+                border: 1px solid black;
+            }
+        // Google
+        .img-replace15(
+            style='width:114px;height:40px;font-size:32px;letter-spacing:3px'
+            data-src='https://js.cx/search/google.png')
+            span(style='color:#1A53F7') G
+            span(style='color:#E42131') o
+            span(style='color:#FEB819') o
+            span(style='color:#164AF2') g
+            span(style='color:#00a315') l
+            span(style='color:#E42131') e
+        // Яндекс
+        .img-replace15(
+            style='width:101px;height:40px;font-size:32px'
+            data-src='https://js.cx/search/yandex.png'
+            )
+            span(style='color:#F00') Я
+            | ндекс
+        // Bing
+        .img-replace15(
+            style='width:100;height:40px;font-size:32px;color:#006dd4;font-weight:bold;letter-spacing: 3px; font-family:Arial'
+            data-src='https://js.cx/search/bing.png'
+            ) bing
     #container14
         p
             h7 Задача 14 (нажмите одновременно клавиши с кнопками 'Q' + 'W')
