start chapter /forms-controls

--- a/src/event-details.jade
+++ b/src/event-details.jade
@@ -31,6 +31,15 @@ style.
             Загрузка документа: DOMContentLoaded, load, beforeunload, unload
         li.
             Загрузка скриптов, картинок, фреймов: onload и onerror
+    #container18
+        p
+            h7 Задача 18 (Скрипты с коллбэком)
+    #container16
+        p
+            h7 Задача 17 (Скрипт с коллбэком)
+    #container16
+        p
+            h7 Задача 16 (Загрузить изображения с коллбэком)
     #container15
         p
             h7 Задача 15
@@ -57,10 +66,10 @@ style.
             span(style='color:#F00') Я
             | ндекс
         // Bing
-        .img-replace15(
-            style='width:100;height:40px;font-size:32px;color:#006dd4;font-weight:bold;letter-spacing: 3px; font-family:Arial'
-            data-src='https://js.cx/search/bing.png'
-            ) bing
+        //- .img-replace15(
+        //-     style='width:100;height:40px;font-size:32px;color:#006dd4;font-weight:bold;letter-spacing: 3px; font-family:Arial'
+        //-     data-src='https://js.cx/search/bing.png'
+        //-     ) bing
     #container14
         p
             h7 Задача 14 (нажмите одновременно клавиши с кнопками 'Q' + 'W')
