--- a/src/index.jade
+++ b/src/index.jade
@@ -41,4 +41,7 @@ include template/header
         li
           a(href="event-details.html" title="События в деталях").
             События в деталях
+        li
+          a(href="forms-controls.html" title="Формы, элементы управления").
+            Формы, элементы управления
 include template/footer
