exercise /events-change

--- a/src/forms-controls.jade
+++ b/src/forms-controls.jade
@@ -18,6 +18,216 @@ style.
             Изменение: change, input, cut, copy, paste
         li.
             Формы: отправка, событие и метод submit
+    #container8
+        p
+            h7 Задача 8
+        style.
+            .td8 select,
+            .td8 input {
+                width: 150px;
+            }
+            #diagram8 td {
+                vertical-align: bottom;
+                text-align: center;
+                padding: 10px;
+            }
+            #diagram8 div {
+                margin: auto;
+            }
+        | Калькулятор процентов, из расчёта 12% годовых.
+        form(name='calculator')
+            table
+                tr
+                    td.td8 Сумма
+                    td.td8
+                        input(name='money', type='text', value='10000')
+                tr
+                    td.td8 Срок в месяцах
+                    td.td8
+                        select(name='months')
+                            option(value='3') 3 (минимум)
+                            option(value='6') 6 (полгода)
+                            option(value='12', selected='') 12 (год)
+                            option(value='18') 18 (1.5 года)
+                            option(value='24') 24 (2 года)
+                            option(value='30') 30 (2.5 года)
+                            option(value='36') 36 (3 года)
+                tr
+                    td.td8 С капитализацией
+                    td.td8
+                        input(name='capitalization', type='checkbox')
+        table#diagram8
+            tr
+                th Было:
+                th Станет:
+            tr
+                th#money-before
+                th#money-after
+            tr
+                td
+                    div(style='background: red;width:40px;height:100px')
+                td
+                    #height-after(style='background: green;width:40px;height:0')
+
+    #container7
+        p
+            h7 Задача 7
+        | Введите текст(например, пароль) с нажатым CapsLock:
+        input(type='text')
+        #capsIndicator7(style='display:none;color:red') Внимание: нажат CapsLock!
+    #container6
+        p
+            h7 Задача 6
+        style.
+            #input6 {
+                font: 14px/14px Arial, sans-serif;
+                width: 12em;
+                padding: 0;
+                margin: 0;
+            }
+
+            #placeholder6 {
+                font: 14px/14px Arial, sans-serif;
+                position: absolute;
+                margin: -1.2em 0 0 0.2em;
+                color: red;
+            }
+        div Добро пожаловать
+        input#input6(type='password')
+        #placeholder6 Скажи пароль, друг
+        div .. и заходи
+    #container5
+        p
+            h7 Задача 5
+        style.
+            /* общие стили для таблицы */
+            .th5 {
+                text-align: center;
+                font-weight: bold;
+            }
+            .td5 {
+                width: 150px;
+                white-space: nowrap;
+                text-align: center;
+                vertical-align: middle;
+                padding: 10px;
+            }
+            .nw5 {
+                background-color: #999;
+            }
+
+            .n5 {
+                background-color: #03f;
+                color: #fff;
+            }
+            .ne5 {
+                background-color: #ff6;
+            }
+            .w5 {
+                background-color: #ff0;
+            }
+            .c5 {
+                background-color: #60c;
+                color: #fff;
+            }
+            .e5 {
+                background-color: #09f;
+                color: #fff;
+            }
+            .sw5 {
+                background-color: #963;
+                color: #fff;
+            }
+            .s5 {
+                background-color: #f60;
+                color: #fff;
+            }
+            .se5 {
+                background-color: #0c3;
+                color: #fff;
+            }
+        p
+            | Кликните на ячейке для начала редактирования. Когда закончите -- нажмите OK или CANCEL.
+        table#bagua-table5
+            tr
+                th.th5(colspan='3')
+                    em Bagua
+                    |  Chart: Direction, Element, Color, Meaning
+            tr
+                td.td5.nw5
+                    strong Northwest
+                    br
+                    | Metal
+                    br
+                    | Silver
+                    br
+                    | Elders
+                td.td5.n5
+                    strong North
+                    br
+                    | Water
+                    br
+                    | Blue
+                    br
+                    | Change
+                td.td5.ne5
+                    strong Northeast
+                    br
+                    | Earth
+                    br
+                    | Yellow
+                    br
+                    | Direction
+            tr
+                td.td5.w5
+                    strong West
+                    br
+                    | Metal
+                    br
+                    | Gold
+                    br
+                    | Youth
+                td.td5.c5
+                    strong Center
+                    br
+                    | All
+                    br
+                    | Purple
+                    br
+                    | Harmony
+                td.td5.e5
+                    strong East
+                    br
+                    | Wood
+                    br
+                    | Blue
+                    br
+                    | Future
+            tr
+                td.td5.sw5
+                    strong Southwest
+                    br
+                    | Earth
+                    br
+                    | Brown
+                    br
+                    | Tranquility
+                td.td5.s5
+                    strong South
+                    br
+                    | Fire
+                    br
+                    | Orange
+                    br
+                    | Fame
+                td.td5.se5
+                    strong Southeast
+                    br
+                    | Wood
+                    br
+                    | Green
+                    br
+                    | Romance
     #container4
         p
             h7 Задача 4
