start /forms-submit

--- a/src/forms-controls.jade
+++ b/src/forms-controls.jade
@@ -65,7 +65,7 @@ style.
                 th#money-after
             tr
                 td
-                    div(style='background: red;width:40px;height:100px')
+                    #height-before(style='background: red;width:40px;height:100px')
                 td
                     #height-after(style='background: green;width:40px;height:0')
 
