--- a/src/index.jade
+++ b/src/index.jade
@@ -44,4 +44,7 @@ include template/header
         li
           a(href="forms-controls.html" title="Формы, элементы управления").
             Формы, элементы управления
+        li
+          a(href="widgets.html" title="Создание графических компонентов").
+            Создание графических компонентов
 include template/footer
